# app/Features/Order/Enums/OrderType.php
@@ -1,0 +1,9 @@
+<?php
+
+namespace App\Features\Order\Enums;
+
+enum OrderType: string
+{
+    case DELIVERY = 'delivery';
+    case PICKUP = 'pickup';
+}
